infrastructure/terraform/subnets.tf
resource "aws_subnet" "public_a" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name    = "intelligent-public-subnet-a"
    Tier    = "Public"
    Project = "intelligent-cloud-deployment-platform"
  }
}

resource "aws_subnet" "public_b" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "ap-south-1b"
  map_public_ip_on_launch = true

  tags = {
    Name    = "intelligent-public-subnet-b"
    Tier    = "Public"
    Project = "intelligent-cloud-deployment-platform"
  }
}

resource "aws_subnet" "private_a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.11.0/24"
  availability_zone = "ap-south-1a"

  tags = {
    Name    = "intelligent-private-subnet-a"
    Tier    = "Private"
    Project = "intelligent-cloud-deployment-platform"
  }
}

resource "aws_subnet" "private_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.12.0/24"
  availability_zone = "ap-south-1b"

  tags = {
    Name    = "intelligent-private-subnet-b"
    Tier    = "Private"
    Project = "intelligent-cloud-deployment-platform"
  }
}
